# choco

./: .gitignore  README.md  choco.service  choco.sh  config.yaml.template  pyproject.toml
choco/: __init__.py  app.py  auth.py  kotekan.py  ssh.py  state.py  sync.py  web.py
choco/templates/: _dashboard_table.html  _node_status.html  _toggle_started.html  _toggle_started_all.html  base.html  dashboard.html  edit.html  edit_group.html  login.html  nodes.html  reinstall.html
configs/: deploy.yaml  nodes.yaml
configs/.updatable/cx/: cx27.json
configs/.updatable/recv/: recv1.json
configs/cx/: cx27.yaml
configs/recv/: recv1.j2  recv1.yaml
jobs/: choco-eop-broadcast.service  choco-eop-broadcast.timer  choco.service  eop-broadcast.sh  eop_update.py  eop_utils.py  generateEOPTable.py
tests/: test_auth.py  test_kotekan.py  test_ssh.py  test_state.py  test_sync.py  test_web.py
